create category for form and model.forms and many more

--- a/event/templates/dashboard/category_form.html
+++ b/event/templates/dashboard/category_form.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
 <body>
-    <h1 class="font-extrabold">This Is Event View Page</h1>
+    <h1>Create Category type for event Here</h1>
+    <div>
+
+    </div>
 </body>
 </html>
