--- a/event/templates/dashboard/event_form.html
+++ b/event/templates/dashboard/event_form.html
@@ -1,13 +1,11 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
 <body>
-    <h1 class="font-extrabold">This Is Event View Page</h1>
+    <h1>Create Event with form</h1>
 </body>
 </html>
