--- a/event/templates/home.html
+++ b/event/templates/home.html
@@ -1,13 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
 <body>
   <div>
-    
+    <div class="mx-auto p-8 bg-sky-300 rounded-sm shadow-lg border-2">
+      <ul class="flex justify-evenly font-bold text-2xl">
+        <a href="{% url 'home' %}"><li class="hover:border-2 hover:bg-sky-900 hover:p-5 hover:rounded-md">Home</li></a>
+        <a href="{% url 'create' %}"><li class="hover:border-2 hover:bg-sky-900 hover:p-5 hover:rounded-md">Create Event</li></a>
+        <a href="{% url 'view' %}"><li class="hover:border-2 hover:bg-sky-900 hover:p-5 hover:rounded-md">Events</li></a>
+      </ul>
+    </div>
+    <div class="mx-auto h-screen p-8 rounded-sm shadow-lg">
+      <h1 class="text-4xl font-bold text-center p-10 border-y-2 bg-sky-700 text-white">Event Management</h1>
+    </div>
   </div>
 </body>
 </html>
