--- a/event/templates/home.html
+++ b/event/templates/home.html
@@ -10,19 +10,7 @@
 <body class="bg-gray-100">
   <div>
     <!-- Navbar -->
-    <div class="mx-auto p-10 bg-gradient-to-r from-teal-400 via-cyan-500 to-sky-600 rounded-sm shadow-lg border-2">
-      <ul class="flex justify-center gap-60 font-bold text-lg text-white">
-        <a href="{% url 'home' %}">
-          <li class="px-4 py-2 bg-white text-sky-800 rounded-lg hover:text-white hover:bg-sky-700  hover:rounded-lg transition duration-300 ease-in-out">Home</li>
-        </a>
-        <a href="{% url 'create' %}">
-          <li class="px-4 py-2 bg-white text-sky-800 rounded-lg hover:text-white hover:bg-sky-700  hover:rounded-lg transition duration-300 ease-in-out">Create Event</li>
-        </a>
-        <a href="{% url 'view' %}">
-          <li class="px-4 py-2 bg-white text-sky-800 rounded-lg hover:text-white hover:bg-sky-700 hover:rounded-lg transition duration-300 ease-in-out">Events</li>
-        </a>
-      </ul>
-    </div>
+    {% include "dashboard/navbar.html" %}
 
     <!-- Main Content -->
     <div class="mx-auto h-screen p-10 rounded-sm shadow-lg bg-white mt-8">
@@ -31,6 +19,19 @@
       <div class="text-center mt-12">
         <a href="{% url 'event_form' %}" class="px-8 py-3 bg-sky-600 text-white text-xl rounded-md shadow-md hover:bg-sky-800 transition duration-300 ease-in-out">Create New Event</a>
       </div>
+
+      <section class="grid grid-cols-4 gap-5 p-5 text-white">
+        {% if events %}
+          {% for event in events %}
+          <div class="bg-emerald-300 border-2 rounded-md p-2">
+          <p class="text-2xl font-bold text-center">{{event.name}}</p>
+          <p>{{event.date}}</p>
+          <p>{{event.time}}</p>
+          <p>{{event.location}}</p>
+          </div>
+          {% endfor %}
+        {% endif %}
+      </section>
     </div>
   </div>
 </body>
