--- a/event/templates/dashboard/navbar.html
+++ b/event/templates/dashboard/navbar.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
 <body>
     <div class="mx-auto p-10 bg-gradient-to-r from-teal-400 via-cyan-500 to-sky-600 rounded-sm shadow-lg border-2">
