all events shows in another page designed

--- a/event/templates/dashboard/dashboard_main.html
+++ b/event/templates/dashboard/dashboard_main.html
@@ -14,15 +14,24 @@
             <h1>Total Participants: {{total_participant}}</h1>
         </div>
         </a>
+        <a href="{% url 'all_events' %}">
         <div class="border-2 rounded-md bg-gradient-to-l from-teal-400 via-cyan-500 to-sky-600 text-white p-10 text-center">
             <h1>Total Events: {{total_events}}</h1>
         </div>
+        </a>
+
+        <a href="">
         <div class="border-2 rounded-md bg-gradient-to-l from-teal-400 via-cyan-500 to-sky-600 text-white p-10 text-center">
             <h1>Upcoming Events: </h1>
         </div>
+        </a>
+
+        <a href="">
         <div class="border-2 rounded-md bg-gradient-to-l from-teal-400 via-cyan-500 to-sky-600 text-white p-10 text-center">
             <h1>Past Events: </h1>
         </div>
+        </a>
+
     </div>
 </body>
 </html>
