--- a/event/templates/dashboard/all_events.html
+++ b/event/templates/dashboard/all_events.html
@@ -4,25 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
-<body>
-    {% comment %} navbar {% endcomment %}
+<body class="bg-gray-100">
+    {% comment %} Navbar {% endcomment %}
     <section>
         {% include "dashboard/navbar.html" %}
     </section>
     
-    {% comment %} dashboard main {% endcomment %}
+    {% comment %} Dashboard Main {% endcomment %}
     <section>
         {% include "dashboard/dashboard_main.html" %} 
     </section>
 
-    {% comment %} default today event {% endcomment %}
-    <section>
-        <h1 class="text-3xl font-bold italic text-center border-2 p-2 rounded-md m-2">Todays All Events</h1>
-        {% if today_event %}
-        <div class="overflow-x-auto">
+    {% comment %} Event List {% endcomment %}
+    <section class="w-full mx-auto mt-8 p-6 bg-white shadow-lg rounded-lg">
+        <h1 class="text-3xl font-bold italic text-center border-2 p-2 rounded-md m-2"> All Events</h1>
+        {% if events %}
+            <div class="overflow-x-auto">
                 <table class="min-w-full bg-white border border-gray-300 rounded-lg">
                     <thead>
                         <tr class="bg-gray-200 text-gray-700">
@@ -30,21 +30,33 @@
                             <th class="py-2 px-4 border">Date</th>
                             <th class="py-2 px-4 border">Time</th>
                             <th class="py-2 px-4 border">Location</th>
+                            <th class="py-2 px-4 border">Edit</th>
+                            <th class="py-2 px-4 border">Delete</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for event in today_event %}
-                        <tr class="border-b hover:bg-gray-100">
+                        {% for event in events %}
+                            <tr class="border-b hover:bg-gray-100">
                                 <td class="py-2 px-4 border text-center">{{ event.name }}</td>
                                 <td class="py-2 px-4 border text-center">{{ event.date }}</td>
                                 <td class="py-2 px-4 border text-center">{{ event.time }}</td>
                                 <td class="py-2 px-4 border text-center">{{ event.location }}</td>
-                        </tr>                               
+                                <td class="py-2 px-4 border text-center">
+                                    <button class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-1 px-3 rounded">
+                                        Edit
+                                    </button>
+                                </td>
+                                <td class="py-2 px-4 border text-center">
+                                    <button class="bg-red-500 hover:bg-red-600 text-white font-semibold py-1 px-3 rounded">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
                         {% endfor %}
                     </tbody>
                 </table>
+            </div>
         {% endif %}
     </section>
-
 </body>
 </html>
