--- a/event/templates/dashboard/participant.html
+++ b/event/templates/dashboard/participant.html
@@ -21,7 +21,7 @@
 
     {% comment %} Participants List {% endcomment %}
     <section class="w-full mx-auto mt-10 p-6 bg-white rounded-lg shadow-md">
-        <h2 class="text-2xl font-bold text-gray-800 mb-4">Participants</h2>
+        <h1 class="text-3xl font-bold italic text-center border-2 p-2 rounded-md m-2">Participants</h1>
         
         {% if participants %}
             <div class="overflow-x-auto">
