delete operation done

--- a/event/templates/dashboard/category_form.html
+++ b/event/templates/dashboard/category_form.html
@@ -11,7 +11,9 @@
     <h1>Create Category type for event Here</h1>
     <div>
         {% if massage %}
-        <p>{{massage}}</p>
+            {% for massage in massage %}
+                <h1>{{massage}}</h1>
+            {% endfor %}
         {% endif %}
     </div>
     <div>
