--- a/event/templates/dashboard/dashboard_main.html
+++ b/event/templates/dashboard/dashboard_main.html
@@ -63,7 +63,7 @@
                                 <td class="py-2 px-4 border text-center">{{ event.time }}</td>
                                 <td class="py-2 px-4 border text-center">{{ event.location }}</td>
                                 <td class="py-2 px-4 border text-center">
-                                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit</button>
+                                    <a href="{% url 'edit' event.id %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit</a>
                                 </td>
                                 <td class="py-2 px-4 border text-center">
                                     <form action="{% url 'delete' event.id %}" method="POST">
