--- a/event/templates/dashboard/navbar.html
+++ b/event/templates/dashboard/navbar.html
@@ -14,7 +14,7 @@
             <li class="px-4 py-2 bg-white text-sky-800 rounded-lg hover:text-white hover:bg-sky-700  hover:rounded-lg transition duration-300 ease-in-out">Home</li>
         </a>
         <a href="{% url 'create' %}">
-            <li class="px-4 py-2 bg-white text-sky-800 rounded-lg hover:text-white hover:bg-sky-700  hover:rounded-lg transition duration-300 ease-in-out">Create Event</li>
+            <li class="px-4 py-2 bg-white text-sky-800 rounded-lg hover:text-white hover:bg-sky-700  hover:rounded-lg transition duration-300 ease-in-out">Create Now</li>
         </a>
         <a href="{% url 'view' %}">
             <li class="px-4 py-2 bg-white text-sky-800 rounded-lg hover:text-white hover:bg-sky-700 hover:rounded-lg transition duration-300 ease-in-out">Dashboard</li>
