showing massage properly

--- a/event/templates/dashboard/event_form.html
+++ b/event/templates/dashboard/event_form.html
@@ -4,25 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create Event</title>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
 </head>
 <body>
     <div>
-        {% comment %} <div>
-            {% if massage %}
-                {% for massage in massage %}
-                    <h1>{{massage}}</h1>
-                {% endfor %}
-            {% endif %}
-        </div> {% endcomment %}
-        <div class="w-1/2 mx-auto mt-10 border-2 border-gray-300 p-5 rounded-md">
-            <form action="" method="POST">
-                {% csrf_token %}
-                {{event_form}}
-                <button type="submit" class="bg-teal-600 border-2 p-2 rounded-md text-2xl font-semibold hover:bg-teal-300">Submit</button>
-            </form>
+        {% include "dashboard/navbar.html" %}
+    </div>
+
+    {% comment %} Show success message {% endcomment %}
+    {% if message %}
+        <div class="w-1/2 mx-auto mt-5 p-4 bg-green-100 border border-green-500 text-green-700 rounded">
+            {{ message }}
         </div>
+    {% endif %}
+
+    <div class="w-1/2 mx-auto mt-10 border-2 border-gray-300 p-5 rounded-md">
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ event_form.as_p }}
+            <button type="submit" class="bg-teal-600 border-2 p-2 rounded-md text-2xl font-semibold hover:bg-teal-300">
+                Submit
+            </button>
+        </form>
     </div>
 </body>
 </html>
